@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<map version="1.0" orientation="orthogonal" width="3" height="3" tilewidth="32" tileheight="32">
+ <tileset firstgid="1" name="Desert" tilewidth="32" tileheight="32" spacing="1" margin="1">
+  <image source="tmw_desert_spacing.png" width="265" height="199"/>
+ </tileset>
+ <layer name="Tile layer" width="3" height="3">
+  <data encoding="base64" compression="zlib">
+   eJxjYEAFcgyYAAACfAAf
+  </data>
+ </layer>
+ <objectgroup name="Object Layer" width="3" height="3">
+  <object gid="30" x="32" y="64"/>
+ </objectgroup>
+</map>
