@@ -1,4 +1,15 @@
+Legend:
+    ** Incompatible API change
+    + Feature addition
+    ! Bug fix
+    - Other change (performance, docs, etc)
+
 0.2 [unreleased]
+    ** All pixel measurements have been moved to pixel_size,
+        pixel_width, pixel_height attributes.
+        The size, width and height attributes of MapTile, MapObject,
+        and TilesetTile are now in units of map tiles.
+
     ! Fix hashes of TilesetTile, improve equality tests
     + Support testing for empty layers with bool(layer)
     + Support for export/import to/from a dict compatible with Tiled's
